[gd_scene load_steps=17 format=3 uid="uid://crwrh0frwjs78"]

[ext_resource type="Script" path="res://player.gd" id="1_s7ubn"]
[ext_resource type="Texture2D" uid="uid://do5b423delbxl" path="res://player.png" id="2_0uu35"]
[ext_resource type="Resource" uid="uid://buxjc2ss2cw4p" path="res://FasterMovementData.tres" id="2_m81ih"]
[ext_resource type="AudioStream" uid="uid://q6mk2qjr5q46" path="res://Dot.wav" id="4_xlf2p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xs1o1"]
atlas = ExtResource("2_0uu35")
region = Rect2(0, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmdqi"]
atlas = ExtResource("2_0uu35")
region = Rect2(0, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5bdp"]
atlas = ExtResource("2_0uu35")
region = Rect2(144, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ema24"]
atlas = ExtResource("2_0uu35")
region = Rect2(24, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0whs"]
atlas = ExtResource("2_0uu35")
region = Rect2(48, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqkjw"]
atlas = ExtResource("2_0uu35")
region = Rect2(72, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfg1r"]
atlas = ExtResource("2_0uu35")
region = Rect2(96, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojsu8"]
atlas = ExtResource("2_0uu35")
region = Rect2(120, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5j7m"]
atlas = ExtResource("2_0uu35")
region = Rect2(0, 0, 24, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_rswar"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs1o1")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmdqi")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5bdp")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ema24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0whs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqkjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfg1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojsu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5j7m")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ibyg"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7343k"]
size = Vector2(6, 12)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
floor_constant_speed = true
floor_snap_length = 3.0
script = ExtResource("1_s7ubn")
movement_data = ExtResource("2_m81ih")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_rswar")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_5ibyg")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2.08165e-12, -32)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="HazardDetector" type="Area2D" parent="."]
position = Vector2(2.08165e-12, -32)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardDetector"]
position = Vector2(0, 25)
shape = SubResource("RectangleShape2D_7343k")

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 3
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xlf2p")
volume_db = 10.0

[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
